--- a/package.json
+++ b/package.json
@@ -28,11 +28,17 @@
     "@lexical/selection": "^0.20.0",
     "@lexical/table": "^0.20.0",
     "@lexical/utils": "^0.20.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/scroll-mode": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
     "katex": "^0.16.11",
     "lexical": "^0.20.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.461.0",
     "next": "^14.2.18",
+    "pdfjs-dist": "^3.4.120",
     "prettier": "^3.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
