--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@lexical/table": "^0.20.0",
     "@lexical/utils": "^0.20.0",
     "chart.js": "^4.4.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "katex": "^0.16.11",
     "lexical": "^0.20.0",
     "lodash-es": "^4.17.21",
@@ -38,6 +40,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.5",
     "y-websocket": "^2.0.4",
     "yjs": "^13.6.20"
   },
