--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "lucide-react": "^0.461.0",
     "nanoid": "^4.0.2",
     "next": "^15.0.3",
+    "next-pwa": "^5.6.0",
     "prettier": "^3.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
