--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "iframe-resizer": "^4.4.5",
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.11",
