--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
+  "semi": true,
+  "tabWidth": 2,
+  "printWidth": 100,
   "singleQuote": true,
-  "arrowParens": "avoid",
-  "semi": false,
-  "printWidth": 120,
-  "proseWrap": "always"
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "endOfLine": "auto"
 }
