Changing husky method

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write --ignore-path .gitignore \"./**/*.{js,jsx,ts,tsx,json,css}\"",
-    "prepare": "husky install",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "postinstall": "husky"
   },
   "dependencies": {
     "@awesome.me/kit-5edf49e0db": "^1.0.4",
