Updating husky config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write --ignore-path .gitignore \"./**/*.{js,jsx,ts,tsx,json,css}\"",
     "type-check": "tsc --noEmit",
-    "postinstall": "husky"
+    "prepare": "husky"
   },
   "dependencies": {
     "@awesome.me/kit-5edf49e0db": "^1.0.4",
