--- a/package.json
+++ b/package.json
@@ -113,9 +113,11 @@
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "^14.0.3",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.1",
@@ -127,8 +129,8 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --fix",
-      "npm run type-check"
-    ]
+      "eslint --fix"
+    ],
+    "**/*.{ts,tsx}": "bash -c 'npm run type-check'"
   }
 }
