--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@awesome.me/kit-5edf49e0db": "^1.0.4",
+    "@coinbase/onchainkit": "^0.36.8",
     "@fontsource/inter": "^5.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
@@ -27,6 +28,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-query": "^5.64.2",
     "@tippyjs/react": "^4.2.6",
     "@tiptap-pro/extension-ai": "^2.16.0",
     "@tiptap-pro/extension-details": "^2.16.0",
@@ -75,6 +77,7 @@
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
     "@tiptap/suggestion": "^2.10.2",
+    "@web3modal/wagmi": "^5.1.11",
     "cal-sans": "^1.0.1",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
@@ -91,6 +94,7 @@
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "pino-pretty": "^13.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
@@ -100,6 +104,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.1",
+    "viem": "^2.22.13",
+    "wagmi": "^2.14.9",
     "y-prosemirror": "^1.2.13",
     "y-websocket": "^2.0.4",
     "yjs": "^13.6.20"
