--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
     "@tiptap/suggestion": "^2.10.2",
+    "@types/sanitize-html": "^2.13.0",
     "cal-sans": "^1.0.1",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
@@ -96,6 +97,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "sanitize-html": "^2.14.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
