--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/pro-light-svg-icons": "^6.7.2",
     "@fortawesome/pro-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
@@ -92,6 +93,7 @@
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
