--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.1",
+    "null-loader": "^4.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.15",
@@ -132,8 +133,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
+      "prettier --write --ignore-path .gitignore",
+      "eslint --fix --ignore-pattern 'public/*'"
     ],
     "**/*.{ts,tsx}": "bash -c 'npm run type-check'"
   }
