--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "next": "^15.0.3",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
@@ -128,6 +128,7 @@
     "null-loader": "^4.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
   },
