--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@hocuspocus/provider": "^2.14.0",
+    "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -99,6 +100,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
     "sanitize-html": "^2.14.0",
     "tailwind-merge": "^2.5.5",
@@ -107,7 +109,8 @@
     "uuid": "^9.0.1",
     "y-prosemirror": "^1.2.13",
     "y-websocket": "^2.0.4",
-    "yjs": "^13.6.20"
+    "yjs": "^13.6.20",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
