--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^4.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tippyjs/react": "^4.2.6",
@@ -97,6 +98,7 @@
     "next-pwa": "^5.6.0",
     "pdfjs-dist": "^4.10.38",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
@@ -119,6 +121,7 @@
     "@types/node": "^20",
     "@types/quill": "^2.0.14",
     "@types/react": "^18",
+    "@types/react-avatar-editor": "^13.0.4",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.8",
