--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "dayjs": "^1.11.13",
     "iframe-resizer": "^4.4.5",
     "jsonwebtoken": "^9.0.2",
@@ -94,10 +95,11 @@
     "lowlight": "^3.1.0",
     "lucide-react": "^0.461.0",
     "nanoid": "^5.0.9",
-    "next": "^15.1.7",
+    "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "pdfjs-dist": "^4.10.38",
+    "pino-pretty": "^13.0.0",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
