--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "pdfjs-dist": "^4.10.38",
+    "pino-pretty": "^13.0.0",
     "react": "^18.3.1",
     "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
