--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "critters": "^0.0.23",
     "dayjs": "^1.11.13",
     "iframe-resizer": "^4.4.5",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.11",
     "lexical": "^0.20.0",
@@ -120,6 +121,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
