--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@awesome.me/kit-5edf49e0db": "^1.0.4",
     "@coinbase/onchainkit": "^0.37.3",
     "@fontsource/inter": "^5.1.0",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/pro-light-svg-icons": "^6.7.2",
@@ -105,6 +105,7 @@
     "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
