--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@tiptap/extension-text-style": "^2.10.2",
     "@tiptap/extension-typography": "^2.10.2",
     "@tiptap/extension-underline": "^2.10.2",
+    "@tiptap/extension-youtube": "^2.11.7",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
