--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
     "@tiptap/suggestion": "^2.10.2",
+    "@types/lodash": "^4.17.16",
     "@types/sanitize-html": "^2.13.0",
     "cal-sans": "^1.0.1",
     "chart.js": "^4.4.6",
@@ -125,6 +126,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/quill": "^2.0.14",
