--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.1",
+    "loader-utils": "^3.3.1",
     "null-loader": "^4.0.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
