--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@tiptap/starter-kit": "^2.10.2",
     "@tiptap/suggestion": "^2.10.2",
     "@types/lodash": "^4.17.16",
+    "@types/react-datepicker": "^6.2.0",
     "@types/sanitize-html": "^2.13.0",
     "cal-sans": "^1.0.1",
     "chart.js": "^4.4.6",
@@ -108,6 +109,7 @@
     "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
