--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "critters": "^0.0.23",
     "dayjs": "^1.11.13",
     "ethers": "^6.13.5",
+    "gsap": "^3.13.0",
     "iframe-resizer": "^4.4.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -102,6 +103,7 @@
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
+    "ogl": "^1.0.11",
     "pdfjs-dist": "^4.10.38",
     "persona-react": "^6.0.0",
     "pino-pretty": "^13.0.0",
