--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-avatar-editor": "^13.0.2",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
