--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.17.11",
+    "@amplitude/analytics-react-native": "^1.4.13",
     "@coinbase/onchainkit": "^0.37.3",
     "@fontsource/inter": "^5.1.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -29,6 +31,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@svgr/webpack": "^8.1.0",
     "@tippyjs/react": "^4.2.6",
     "@tiptap-pro/extension-ai": "^2.16.0",
