--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@headlessui/react": "^2.2.0",
     "@hocuspocus/provider": "^2.14.0",
     "@hookform/resolvers": "^4.1.0",
+    "@next/third-parties": "^15.3.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
