--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/lodash": "^4.17.16",
     "@types/react-datepicker": "^6.2.0",
     "@types/sanitize-html": "^2.13.0",
+    "@vercel/analytics": "^1.5.0",
     "cal-sans": "^1.0.1",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
