--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "sanitize-html": "^2.14.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
