--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,13 @@
     "react-hooks/rules-of-hooks": "off",
     "prefer-const": "off",
     "@next/next/no-img-element": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["app/**/\\[id\\]/\\[slug\\]/**/page.tsx"],
+      "rules": {
+        "work-document-tracking": "error"
+      }
+    }
+  ]
 }
