--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "lint:work-pages": "find app -path '*/\\[id\\]/\\[slug\\]/*/page.tsx' -exec npx eslint {} --rulesdir eslint-rules \\;",
+    "lint:work-pages": "find app -path '*/\\[id\\]/\\[slug\\]/page.tsx' -o -path '*/\\[id\\]/\\[slug\\]/*/page.tsx' | xargs npx eslint --rulesdir eslint-rules --rule 'work-document-tracking: error'",
     "format": "prettier --write --ignore-path .gitignore \"./**/*.{js,jsx,ts,tsx,json,css}\"",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
