--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "next-pwa": "^5.6.0",
     "ogl": "^1.0.11",
     "pdfjs-dist": "^4.10.38",
-    "persona-react": "^6.0.0",
+    "persona-react": "6.3.1",
     "pino-pretty": "^13.0.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
@@ -155,7 +155,7 @@
     "@typescript-eslint/parser": "^8.20.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "^15.5.9",
+    "eslint-config-next": "^14.0.3",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.1",
