--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@headlessui/react": "^2.2.0",
     "@hocuspocus/provider": "^2.14.0",
     "@hookform/resolvers": "^4.1.0",
+    "@microsoft/clarity": "^1.0.2",
     "@next/third-parties": "^15.5.9",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.2",
